--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html class="dark"><head><meta charset="utf-8"/><title>Webpack App</title><script defer="defer" src="static/js/main.js"></script></head><body><div id="root"></div></body></html>
+<!doctype html><html class="dark"><head><meta charset="utf-8"/><title>Webpack App</title><script defer="defer" src="static/js/main.8df72248.js"></script><link href="main.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
