--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!doctype html><html class="dark"><head><meta charset="utf-8"/><title>Webpack App</title><script defer="defer" src="static/js/main.8df72248.js"></script><link href="main.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Chat App</title>
+    <script defer="defer" src="static/js/main.8df72248.js"></script>
+    <link href="main.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
