--- a/example/public/index.html
+++ b/example/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html class="dark">
+<html>
   <head>
     <meta charset="utf-8" />
-    <title>Webpack App</title>
+    <title>Chat App</title>
   </head>
   <body>
     <div id="root"></div>
