--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Chat App</title>
-    <script defer="defer" src="static/js/main.8df72248.js"></script>
-    <link href="main.css" rel="stylesheet" />
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html><head><meta charset="utf-8"/><title>Chat App</title><script defer="defer" src="static/js/main.8df72248.js"></script><link href="main.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
